--- a/deploySimpleEC2InstanceStateMachine.yml
+++ b/deploySimpleEC2InstanceStateMachine.yml
@@ -2,17 +2,37 @@
   hosts: localhost
   connection: local
   gather_facts: no
+  
+  vars:
+    - auto_commit: true
+    - manageiq_validate_certs: false
+    
+  roles:
+    - syncrou.manageiq-automate
+  
   tasks:
+    - name: "Set the job ID back into $evm.root"
+      manageiq_automate:
+        workspace: "{{ workspace }}"
+        set_attribute:
+          object: "root"
+          attribute: "tower_job_id"
+          value:  "{{ tower_job_id }}"
+          
     - name: Deploy new VM instance
       ec2:
         key_name: "{{ my_key_name }}"
-        instance_type: t2.micro
-        image: ami-ac442ac3
+        instance_type: "{{ instance_type }}"
+        image: "{{ image }}"
         wait: yes
         count: 1
-        vpc_subnet_id: subnet-23af3748
+        vpc_subnet_id: "{{ subnet }}"
         assign_public_ip: yes
         group: "{{ group_name }}"
-        region: eu-central-1
+        region: "{{ region }}"
         instance_tags:
           app: "{{  app_name }}"
+      register: ec2
+
+
+    - debug: msg="TESTPLAYBOOKOUTPUT {{ ec2.instances[0].id }}"
