--- a/deployEC2InstanceSimple.yml
+++ b/deployEC2InstanceSimple.yml
@@ -17,7 +17,7 @@
         count: 1
         vpc_subnet_id: "{{ subnet }}"
         assign_public_ip: yes
-        group: "{{ group_name }}"
+        group_id: "{{ group_id }}"
         region: "{{ region }}"
         instance_tags:
           app: "{{  app_name }}"
