--- a/deployEC2-module-vmdb.yml
+++ b/deployEC2-module-vmdb.yml
@@ -7,7 +7,7 @@
   gather_facts: no
   
   roles:
-    - syncrou.manageiq-automate
+    - syncrou.manageiq-vmdb
   
   tasks:
   - name: Get a vmdb object
