--- a/deployEC2-module-vmdb.yml
+++ b/deployEC2-module-vmdb.yml
@@ -6,6 +6,10 @@
   connection: local
   gather_facts: no
   
+  vars:
+    - auto_commit: true
+    - manageiq_validate_certs: false
+  
   roles:
     - syncrou.manageiq-vmdb
   
