--- a/deployEC2-module-vmdb.yml
+++ b/deployEC2-module-vmdb.yml
@@ -12,7 +12,8 @@
   
   roles:
   - syncrou.manageiq-vmdb
-  
+  - syncrou.manageiq-automate
+    
   tasks:
   - name: Get a vmdb object
     manageiq_vmdb:
@@ -43,6 +44,14 @@
           - "{{ ec2.instances[0].id }}"
         provider:
           id: 10000000000002
+          
+  - name: "Set a State Var"
+    manageiq_automate:
+      workspace: "{{ workspace }}"
+      set_state_var:
+        attribute: "host_target"
+        value: "{{ ec2.instances[0].public_ip }}"
+    register: workspace
 
 
   - debug: msg="TESTPLAYBOOKOUTPUT {{ ec2 }}"
