--- a/deployEC2-module-vmdb.yml
+++ b/deployEC2-module-vmdb.yml
@@ -12,7 +12,7 @@
   
   roles:
   - syncrou.manageiq-vmdb
-  - syncrou.manageiq-automate
+  #- syncrou.manageiq-automate
     
   tasks:
   - name: Get a vmdb object
