--- a/deployEC2-module-vmdb.yml
+++ b/deployEC2-module-vmdb.yml
@@ -12,7 +12,6 @@
   
   roles:
   - syncrou.manageiq-vmdb
-  - syncrou.manageiq-automate
     
   tasks:
   - name: Get a vmdb object
@@ -45,14 +44,11 @@
         provider:
           id: 10000000000002
           
-  #- name: "Set a State Var"
-  #  manageiq_automate:
-  #    workspace: "{{ workspace }}"
-  #    set_state_var:
-  #      attribute: "host_target"
-  #      value:
-  #      - "{{ ec2.instances[0].public_ip }}"
-  #  register: workspace
-
+  - name: "Set var"
+    manageiq_vmdb:
+      set_state_var:
+        attribute: "host_target"
+        value:
+        - "{{ ec2.instances[0].public_ip }}"
 
   - debug: msg="TESTPLAYBOOKOUTPUT {{ ec2.instances[0].public_ip }}"
