--- a/testPlay.yml
+++ b/testPlay.yml
@@ -7,4 +7,4 @@
   gather_facts: no
   
   tasks:
-  - debug: msg="TESTPLAYBOOKOUTPUT STARTS --- HERE ---"
+  - debug: msg="TESTPLAYBOOKOUTPUT {{ ec2.instances[0].id }}"
