--- a/deployEC2-sm-module-vmdb.yml
+++ b/deployEC2-sm-module-vmdb.yml
@@ -1,48 +1,79 @@
 ---
-# Create a simple VM
-
-- name: Create a simple VM instance
-  hosts: localhost
+- name: Create new AWS EC2 service
+  hosts: all
   connection: local
-  gather_facts: no
-  
   vars:
-  - auto_commit: true
-  - manageiq_validate_certs: false
-  
+    manageiq_validate_certs: false
+    #key_name: latest
+    #vm_name: "{{ vm_name }}"
+    #security_group: sg-ff1cb89a
+    #instance_type: t2.micro
+    #region: eu-west-1
+    #image: ami-f2982a8b
+    #subnet: subnet-933cfbe4
+    provider_id: "{{ provider_id }}"
+
   roles:
+  - syncrou.manageiq-automate
   - syncrou.manageiq-vmdb
   
   tasks:
-  - name: Get a vmdb object
-    manageiq_vmdb:
-      href: "services/10000000000010"
-    register: vmdb_object
-          
-  - name: Deploy new VM instance
-    ec2:
-      key_name: "{{ my_key_name }}"
-      instance_type: "{{ instance_type }}"
-      image: "{{ image }}"
-      wait: yes
-      count: 1
-      vpc_subnet_id: "{{ subnet }}"
-      assign_public_ip: yes
-      group_id: "{{ group_id }}"
-      region: "{{ region }}"
-      instance_tags:
-        app: "{{  app_name }}"
-    register: ec2
-      
-  - name: Service Linking via an object
-    manageiq_vmdb:
-      vmdb: "{{ vmdb_object }}"
-      action: add_provider_vms
-      data:
-        uid_ems:
-          - "{{ ec2.instances[0].id }}"
-        provider:
-          id: 10000000000002
+    - name: Set the job ID back into $evm.root
+      manageiq_automate:
+        workspace: "{{ workspace }}"
+        set_attribute:
+          object: root
+          attribute: tower_job_id
+          value:  "{{ tower_job_id }}"
 
+    - name: Get service_id
+      manageiq_automate:
+        workspace: "{{ workspace }}"
+        get_attribute:
+          object: root
+          attribute: service_id
+      register: service_id
 
-  - debug: msg="TESTPLAYBOOKOUTPUT {{ ec2 }}"
+    - name: Get the Service object
+      manageiq_vmdb:
+        href: "services/{{ service_id.value }}"
+      register: service_object
+
+    - name: Create EC2 Instance
+      ec2:
+        key_name: "{{ key_name }}"
+        instance_tags: {Name: "{{ vm_name }}"}
+        group_id: "{{ security_group }}"
+        instance_type: "{{ instance_type }}"
+        region: "{{ region }}"
+        image: "{{ image }}"
+        wait: yes
+        count: 1
+        vpc_subnet_id: "{{ subnet }}"
+        assign_public_ip: yes
+      register: ec2
+
+    - name: Link the instance to its service
+      manageiq_vmdb:
+        vmdb: "{{ service_object }}"
+        action: add_provider_vms
+        data:
+          uid_ems:
+            - "{{ ec2.instances[0].id }}"
+          provider:
+            id: "{{ provider_id }}"
+
+    - name: Wait for SSH to start
+      wait_for:
+        host: "{{ ec2.instances[0].public_ip }}"
+        port: 22
+        timeout: 300
+      delegate_to: localhost
+
+    - name: Save public_ip in $evm.root
+      manageiq_automate:
+        workspace: "{{ workspace }}"
+        set_attribute:
+          object: root
+          attribute: public_ip
+          value:  "{{ ec2.instances[0].public_ip }}"
