--- a/installSimpleWebApp.yml
+++ b/installSimpleWebApp.yml
@@ -5,7 +5,8 @@
   remote_user: ec2-user
   become_method : sudo
   become: yes
-  gather_facts : yes
+  gather_facts : no
+  
   tasks:
     - name: Copy required application package
       copy:
