--- a/installApache.yml
+++ b/installApache.yml
@@ -6,6 +6,22 @@
   become_method : sudo
   become: yes
   gather_facts : no
+  
+  vars:
+    manageiq_validate_certs: false
+    provider_id: "{{ provider_id }}"
+
+  roles:
+  - syncrou.manageiq-automate
+  - syncrou.manageiq-vmdb
+  
+  - name: Save public_ip in $evm.root
+    manageiq_automate:
+      workspace: "{{ workspace }}"
+      set_attribute:
+        object: root
+        attribute: public_ip
+        value:  "{{ ec2.instances[0].public_ip }}"  
 
   tasks:
   - name: Install httpd package
