--- a/deployEC2-sm-module-vmdb.yml
+++ b/deployEC2-sm-module-vmdb.yml
@@ -62,3 +62,5 @@
           object: root
           attribute: public_ip
           value:  "{{ ec2.instances[0].public_ip }}"
+
+    - debug: var=public_ip
