--- a/installApache.yml
+++ b/installApache.yml
@@ -7,11 +7,11 @@
   become: yes
   gather_facts : no
   
-  #vars:
-  #  manageiq_validate_certs: false
+  vars:
+    manageiq_validate_certs: false
 
-  #roles:
-  #- syncrou.manageiq-automate
+  roles:
+  - syncrou.manageiq-automate
   
   tasks:
   
@@ -22,7 +22,7 @@
   #      object: root
   #      attribute: public_ip
   #      value:  "{{ public_ip }}"  
-        
+          
   - name: Install httpd package
     yum:
       name: httpd
@@ -31,3 +31,11 @@
     service:
       name: httpd
       state: started
+      
+  - name: Save public_ip in $evm.root
+    manageiq_automate:
+      workspace: "{{ workspace }}"
+      set_attribute:
+        object: root
+        attribute: public_ip
+        value:  "{{ public_ip }}"
